--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native/new-app-screen": "0.83.0",
     "react": "19.2.0",
     "react-native": "0.83.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-svg": "^15.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
