--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ android {
 
     namespace "com.recroot_app"
     defaultConfig {
-        applicationId "com.recroot_app"
+        applicationId "com.recrootapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
