--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native/new-app-screen": "0.83.0",
     "react": "19.2.0",
     "react-native": "0.83.0",
