--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-navigation/stack": "^7.6.12",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.18.0",
+    "react-native-svg": "^15.15.1",
     "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
