--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@livekit/react-native": "^2.9.6",
+    "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/bottom-tabs": "^7.8.12",
@@ -17,10 +19,12 @@
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
+    "livekit-client": "^2.16.1",
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.2.0",
