--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.83.0",
+    "@react-navigation/bottom-tabs": "^7.8.12",
+    "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
@@ -27,8 +29,10 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.4",
+    "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
