--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@ package="com.recroot_app">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     
     <!-- OPTIONAL BUT RECOMMENDED FOR BLUETOOTH HEADSETS -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -20,6 +21,10 @@ package="com.recroot_app">
       android:usesCleartextTraffic="true"
       android:networkSecurityConfig="@xml/network_security_config"
       android:supportsRtl="true">
+      <service
+            android:name="com.livekit.reactnative.ScreenCaptureService"
+            android:foregroundServiceType="mediaProjection"
+            android:exported="false" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
