--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@ package="com.recroot_app">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     
     <!-- OPTIONAL BUT RECOMMENDED FOR BLUETOOTH HEADSETS -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
