--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^7.6.12",
     "axios": "^1.13.2",
     "fast-text-encoding": "^1.0.6",
+    "install": "^0.13.0",
     "livekit-client": "^2.16.1",
     "react": "19.2.0",
     "react-native": "0.83.0",
@@ -37,6 +38,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
+    "react-native-video": "^6.18.0",
     "react-native-worklets": "^0.7.1"
   },
   "devDependencies": {
