--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^7.6.12",
     "axios": "^1.13.2",
     "fast-text-encoding": "^1.0.6",
+    "jwt-decode": "^4.0.0",
     "livekit-client": "^2.16.1",
     "react": "19.2.0",
     "react-native": "0.83.0",
