--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "livekit-client": "^2.16.1",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.29.1",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
+    "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
     "react-native-video": "^6.18.0",
     "react-native-worklets": "^0.7.1",
