--- a/ios/Recroot_App/Info.plist
+++ b/ios/Recroot_App/Info.plist
@@ -51,6 +51,17 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>IBMPlexSans-Bold.ttf</string>
+		<string>IBMPlexSans-BoldItalic.ttf</string>
+		<string>IBMPlexSans-ExtraLight.ttf</string>
+		<string>IBMPlexSans-Italic.ttf</string>
+		<string>IBMPlexSans-Light.ttf</string>
+		<string>IBMPlexSans-LightItalic.ttf</string>
+		<string>IBMPlexSans-Medium.ttf</string>
+		<string>IBMPlexSans-MediumItalic.ttf</string>
+		<string>IBMPlexSans-Regular.ttf</string>
+		<string>IBMPlexSans-SemiBold.ttf</string>
+		<string>IBMPlexSans-Thin.ttf</string>
 		<string>Inter_18pt-Bold.ttf</string>
 		<string>Inter_18pt-BoldItalic.ttf</string>
 		<string>Inter_18pt-ExtraBold.ttf</string>
