--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-live-audio-stream": "^1.1.1",
     "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
