--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@livekit/react-native": "^2.9.6",
     "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-documents/picker": "^11.0.3",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.83.0",
@@ -21,7 +22,9 @@
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "fast-text-encoding": "^1.0.6",
     "install": "^0.13.0",
     "livekit-client": "^2.16.1",
@@ -33,13 +36,15 @@
     "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-live-audio-stream": "^1.1.1",
     "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
     "react-native-video": "^6.18.0",
-    "react-native-worklets": "^0.7.1"
+    "react-native-worklets": "^0.7.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
