--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-documents/picker": "^11.0.3",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/bottom-tabs": "^7.8.12",
