--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,7 +84,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+    
     }
+   
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -117,3 +120,4 @@ dependencies {
         implementation jscFlavor
     }
 }
+apply plugin: "com.google.gms.google-services"
