--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.8.6",
     "@react-navigation/stack": "^7.6.12",
     "@reduxjs/toolkit": "^2.11.2",
+    "@stripe/stripe-react-native": "^0.57.2",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
     "fast-text-encoding": "^1.0.6",
@@ -34,6 +35,7 @@
     "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
