--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
     "@livekit/react-native": "^2.9.6",
     "@livekit/react-native-webrtc": "^137.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -34,6 +35,7 @@
     "react-native-audio-record": "^0.2.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-get-random-values": "^2.0.0",
     "react-native-image-picker": "^8.2.1",
@@ -45,6 +47,7 @@
     "react-native-screens": "^4.19.0",
     "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.15.1",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-video": "^6.18.0",
     "react-native-worklets": "^0.7.1",
     "react-redux": "^9.2.0"
