--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@stripe/stripe-react-native": "^0.57.2",
     "axios": "^1.13.2",
     "buffer": "^6.0.3",
+    "country-data": "^0.0.31",
     "fast-text-encoding": "^1.0.6",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^2.16.1",
@@ -46,6 +47,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-live-audio-stream": "^1.1.1",
+    "react-native-localize": "^3.6.1",
     "react-native-permissions": "^5.4.4",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
