push for notification app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -54,5 +54,8 @@
       <meta-data
   android:name="firebase_messaging_auto_init_enabled"
   android:value="true" />
+  <meta-data
+    android:name="com.google.firebase.messaging.default_notification_icon"
+    android:resource="@drawable/ic_notification" />
     </application>
 </manifest>
